Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -1126,16 +1126,43 @@
                                 class="form-control textarea" 
                                 placeholder="한 줄에 하나씩 입력하세요"
                                 style="min-height: 200px;"
-                            >방송 알림 신청하고 적립금 받기
-멤버십 가입하고 할인 쿠폰 받기
-방송 채팅 남기고 적립금 받기
-친구 추천하고 포인트 받기
-첫 구매 후 캐시백 받기
-리뷰 작성하고 적립금 받기
-생일 쿠폰 받기
-등급별 할인 혜택
-무료배송 혜택
-적립금 혜택</textarea>
+                            >엘포인트 사용하고 100배 적립하기
+멤버스 카드 사용하고 5% 적립하기
+엘라이브 상품 구매하고 적립금 받기
+행사 상품 구매하고 적립금 받기
+최유라쇼 상품 구매하고 적립금 받기
+선물하기 주문하고 쿠폰 받기
+해외 직구 상품 구매하고 혜택 받기
+중소기업 상품 구매하고 상품권 응모하기
+무이자할부 신용카드 안내
+제휴 카드 사용하고 캐시백 받기
+제휴 카드 사용하고 5% 청구할인
+벨리곰카드로 할인 쿠폰 받기
+네이버페이 사용하고 네이버포인트 적립하기
+신용카드 발급하고 캐시백 & 엘클럽 무료가입
+롯데카드로 무이자할부 혜택
+엘클럽 고객 전용 제휴 할인 받기
+회원가입하고 할인 쿠폰 받기
+엘클럽 고객 체험단 신청하기
+다이아몬드 고객 엘클럽 무료가입
+롯데오너스 멤버십 가입하기
+엘클럽 가입하고 적립금 받기
+출석하고 선물 교환권 받기
+오늘의 상품 구경하고 선물 교환권 받기
+숏핑 구경하고 선물 교환권 받기
+바로TV톡 참여하고 선물 교환권 받기
+선물하기로 주문하고, 선물 교환권 받기
+구매하고 선물 교환권 받기
+방송 알림 신청하고 선물 교환권 받기
+엘라이브 방송 참여하고(퀴즈/댓글) 적립금 받기
+엘클럽 고객 특가 기획전 구경하기
+상품 리뷰 작성하고 적립금 받기
+보험 가입하고 경품 받기
+보험 가입하고 적립금 받기
+보험료 확인하고 적립금 받기
+출석체크하고 적립금 받기
+(내가) 구매한 상품 리뷰 등록하고 적립금 받기
+마케팅 정보 이용 동의하고 5천원 쿠폰 받기</textarea>
                         </div>
 
                         <div class="flex gap-2">
@@ -1327,7 +1354,7 @@
             <div class="card">
                 <div class="sorting-header">
                     <div class="participant-info">
-                        <h2 id="sorting-participant-name">참여자님의 카드소팅</h2>
+                        <h2 id="sorting-participant-name">참여자님의 카드 분류하기</h2>
                         <p id="sorting-type-info">하이브리드 소팅 진행 중</p>
                     </div>
                     <div class="progress-section">
@@ -1579,16 +1606,43 @@
             id: 'default-project',
             title: '혜택 콘텐츠 카드소팅',
             cards: [
-                '방송 알림 신청하고 적립금 받기',
-                '멤버십 가입하고 할인 쿠폰 받기', 
-                '방송 채팅 남기고 적립금 받기',
-                '친구 추천하고 포인트 받기',
-                '첫 구매 후 캐시백 받기',
-                '리뷰 작성하고 적립금 받기',
-                '생일 쿠폰 받기',
-                '등급별 할인 혜택',
-                '무료배송 혜택',
-                '적립금 혜택'
+                '엘포인트 사용하고 100배 적립하기',
+                '멤버스 카드 사용하고 5% 적립하기', 
+                '엘라이브 상품 구매하고 적립금 받기',
+                '행사 상품 구매하고 적립금 받기',
+                '최유라쇼 상품 구매하고 적립금 받기',
+                '선물하기 주문하고 쿠폰 받기',
+                '해외 직구 상품 구매하고 혜택 받기',
+                '중소기업 상품 구매하고 상품권 응모하기',
+                '무이자할부 신용카드 안내',
+                '제휴 카드 사용하고 캐시백 받기',
+                '제휴 카드 사용하고 5% 청구할인',
+                '벨리곰카드로 할인 쿠폰 받기',
+                '네이버페이 사용하고 네이버포인트 적립하기',
+                '신용카드 발급하고 캐시백 & 엘클럽 무료가입',
+                '롯데카드로 무이자할부 혜택',
+                '엘클럽 고객 전용 제휴 할인 받기',
+                '회원가입하고 할인 쿠폰 받기',
+                '엘클럽 고객 체험단 신청하기',
+                '다이아몬드 고객 엘클럽 무료가입',
+                '롯데오너스 멤버십 가입하기',
+                '엘클럽 가입하고 적립금 받기',
+                '출석하고 선물 교환권 받기',
+	            '오늘의 상품 구경하고 선물 교환권 받기',
+	            '숏핑 구경하고 선물 교환권 받기',
+                '바로TV톡 참여하고 선물 교환권 받기',
+                '선물하기로 주문하고, 선물 교환권 받기',
+                '구매하고 선물 교환권 받기',
+                '방송 알림 신청하고 선물 교환권 받기',
+                '엘라이브 방송 참여하고(퀴즈/댓글) 적립금 받기',
+                '엘클럽 고객 특가 기획전 구경하기',
+                '상품 리뷰 작성하고 적립금 받기',
+                '보험 가입하고 경품 받기',
+                '보험 가입하고 적립금 받기',
+                '보험료 확인하고 적립금 받기',
+                '출석체크하고 적립금 받기',
+                '(내가) 구매한 상품 리뷰 등록하고 적립금 받기',
+                '마케팅 정보 이용 동의하고 5천원 쿠폰 받기'
             ],
             sortingType: 'hybrid',
             predefinedGroups: ['구매혜택', '참여혜택', '카드/결제혜택'],
