--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@
                                 type="text" 
                                 id="webapp-url" 
                                 class="form-control" 
-                                placeholder="Google Apps Script 웹앱 URL을 입력하세요"
+                                placeholder="https://script.google.com/macros/s/AKfycbxQevCB_bl__tovjALHhxy3cBp1O-feVE0QN8QN_jqevvqpGJKbvqExgWxXTCasIYOE/exec"
                             >
                         </div>
 
@@ -1182,7 +1182,7 @@
                                 type="text" 
                                 id="spreadsheet-id" 
                                 class="form-control" 
-                                placeholder="스프레드시트 ID를 입력하세요"
+                                placeholder="1BjcB7eQa-pBAuL_6yCfxIXmn8NSRuwcBgz7JrCRyfXg"
                             >
                         </div>
 
