--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@
                                 type="text" 
                                 id="webapp-url" 
                                 class="form-control" 
-                                placeholder="https://script.google.com/macros/s/AKfycbx-XtY3E5StgHIpBFY3BRkkTd5cDbqmcoVLrgOsOwHm2VfGmyJ2t0K7Ujg0034D6E96/exec"
+                                placeholder="https://script.google.com/macros/s/AKfycbx4PO2TtMb2OVEYVv9xiC6aNG_cJalMpbtITNDg5HobFlXkoYZ0wV6iXEiNF970njMH/exec"
                             >
                         </div>
 
@@ -1182,7 +1182,7 @@
                                 type="text" 
                                 id="spreadsheet-id" 
                                 class="form-control" 
-                                placeholder="1EbxHKeexYmIwiCzRuPMWgozbnqjA98q7XGfs08Cj55I"
+                                placeholder="1Tk2i3zdV_X9_UQd6uayLksAOu70cWFfOAKMQei5AlbA"
                             >
                         </div>
 
@@ -1674,16 +1674,19 @@
                     console.log('전송 데이터 크기:', dataString.length, 'bytes');
                     
                     const minimalData = {
-   			 이름: exportData.이름,
-   			 휴대폰뒷번호4자리: exportData.휴대폰뒷번호4자리,
-   			 완료시간: exportData.완료시간,
- 			 소요시간: exportData.소요시간,
-  			 소팅방식: exportData.소팅방식,
-   			 참여자가분류한그룹수: exportData.participantInfo?.name ? Object.keys(JSON.parse(exportData.그룹별결과 || '{}')).length : 0,
-  			 그룹순서: exportData.그룹순서,
- 			 가장많이사용하는혜택: exportData.가장많이사용하는혜택,
-  			 가장적게사용하는혜택: exportData.가장적게사용하는혜택,
-   			 참여자의견: exportData.참여자의견
+    			이름: exportData.이름,
+  			휴대폰뒷번호4자리: exportData.휴대폰뒷번호4자리,
+   			시작시간: exportData.시작시간,  // ← 추가 필요
+   			완료시간: exportData.완료시간,
+    			소요시간: exportData.소요시간,
+    			소팅방식: exportData.소팅방식,
+    			참여자가추가한그룹수: exportData.참여자가추가한그룹수,  // ← 추가 필요
+    			참여자가분류한그룹수: exportData.참여자가분류한그룹수,  // ← 로직 단순화
+    			그룹별결과: exportData.그룹별결과,  // ← 추가 필요
+    			그룹순서: exportData.그룹순서,
+    			가장많이사용하는혜택: exportData.가장많이사용하는혜택,
+    			가장적게사용하는혜택: exportData.가장적게사용하는혜택,
+    			참여자의견: exportData.참여자의견
 			};
 
 			const params = new URLSearchParams({
