--- a/index.html
+++ b/index.html
@@ -1564,8 +1564,8 @@
         // 🔗 Google Sheets 연동 설정
         // ============================================
         
-        let GOOGLE_APPS_SCRIPT_URL = '';
-        let SPREADSHEET_ID = '';
+        let GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx4PO2TtMb2OVEYVv9xiC6aNG_cJalMpbtITNDg5HobFlXkoYZ0wV6iXEiNF970njMH/exec';
+        let SPREADSHEET_ID = '1Tk2i3zdV_X9_UQd6uayLksAOu70cWFfOAKMQei5AlbA';
 
         // ============================================
         // 전역 변수 및 상태 관리
