--- a/index.html
+++ b/index.html
@@ -445,7 +445,11 @@
             justify-content: center;
         }
         
-        .group-content { min-height: 120px; }
+        .group-content {
+	    min-height: 120px; 
+    	    max-height: 200px; 
+    	    overflow-y: auto; 
+        }
         .empty-group { text-align: center; color: #adb5bd; padding: 40px 20px; font-style: italic; }
         .group-content .card-item { margin: 8px 0; }
         
@@ -1099,10 +1103,10 @@
                                 class="form-control textarea" 
                                 placeholder="한 줄에 하나씩 입력하세요"
                             >구매(적립/사은)
-결제할인(카드/무이자)
+결제할인(카드/무이자)			    
+멤버십/체험단
 참여/보상
-나만의 혜택 알림				    
-멤버십/체험단</textarea>
+나만의 맞춤 혜택</textarea>
                         </div>
 
                         <div class="checkbox-group">
@@ -1128,40 +1132,30 @@
                                 style="min-height: 200px;"
                             >엘포인트 사용하고 100배 적립하기
 멤버스 카드 사용하고 5% 적립하기
-엘라이브 상품 구매하고 적립금 받기
+모바일라이브방송(엘라이브) 상품 구매하고 적립금 받기
 행사 상품 구매하고 적립금 받기
 최유라쇼 상품 구매하고 적립금 받기
 선물하기 주문하고 쿠폰 받기
-해외 직구 상품 구매하고 혜택 받기
-중소기업 상품 구매하고 상품권 응모하기
 무이자할부 신용카드 안내
-제휴 카드 사용하고 캐시백 받기
-제휴 카드 사용하고 5% 청구할인
-벨리곰카드로 할인 쿠폰 받기
-네이버페이 사용하고 네이버포인트 적립하기
-신용카드 발급하고 캐시백 & 엘클럽 무료가입
-롯데카드로 무이자할부 혜택
-엘클럽 고객 전용 제휴 할인 받기
+제휴카드 사용하고 캐시백/청구할인
+벨리곰카드로 할인 쿠폰받기/무이자할부
+네이버페이로 결제하고 네이버포인트 적립
+신용카드 발급하고 캐시백&엘클럽 무료가입
+엘클럽 전용 제휴사 할인 받기
 회원가입하고 할인 쿠폰 받기
-엘클럽 고객 체험단 신청하기
+엘클럽 고객 상품 체험단 신청
 다이아몬드 고객 엘클럽 무료가입
-롯데오너스 멤버십 가입하기
+롯데오너스 멤버스 한달 무료체험
 엘클럽 가입하고 적립금 받기
 출석하고 선물 교환권 받기
-오늘의 상품 구경하고 선물 교환권 받기
-숏핑 구경하고 선물 교환권 받기
+숏핑/오늘의 상품 구경하고 선물 교환권 받기
 바로TV톡 참여하고 선물 교환권 받기
-선물하기로 주문하고, 선물 교환권 받기
-구매하고 선물 교환권 받기
-방송 알림 신청하고 선물 교환권 받기
+상품구매/선물하기 주문하고, 선물 교환권 받기
+방송알림 신청하고 선물 교환권 받기
 엘라이브 방송 참여하고(퀴즈/댓글) 적립금 받기
-엘클럽 고객 특가 기획전 구경하기
 상품 리뷰 작성하고 적립금 받기
-보험 가입하고 경품 받기
-보험 가입하고 적립금 받기
-보험료 확인하고 적립금 받기
+보험가입/보험료 확인하고 경품/적립금 받기
 출석체크하고 적립금 받기
-(내가) 구매한 상품 리뷰 등록하고 적립금 받기
 마케팅 정보 이용 동의하고 5천원 쿠폰 받기</textarea>
                         </div>
 
@@ -1464,7 +1458,7 @@
                                 ← 카드 분류로 돌아가기
                             </button>
                             <button class="btn btn-primary" onclick="submitSurvey()" id="survey-submit-btn">
-                                응답 제출하기
+                                다음 페이지로 이동(2/3)
                             </button>
                         </div>
                     </div>
@@ -1508,7 +1502,7 @@
                                 ← 설문으로 돌아가기
                             </button>
                             <button class="btn btn-primary" onclick="submitFeedback()">
-                                완료하기
+                                최종 제출하기(3/3)
                             </button>
                         </div>
                     </div>
@@ -1604,44 +1598,34 @@
             cards: [
                 '엘포인트 사용하고 100배 적립하기',
                 '멤버스 카드 사용하고 5% 적립하기', 
-                '엘라이브 상품 구매하고 적립금 받기',
+                '모바일라이브방송(엘라이브) 상품 구매하고 적립금 받기',
                 '행사 상품 구매하고 적립금 받기',
                 '최유라쇼 상품 구매하고 적립금 받기',
                 '선물하기 주문하고 쿠폰 받기',
-                '해외 직구 상품 구매하고 혜택 받기',
-                '중소기업 상품 구매하고 상품권 응모하기',
                 '무이자할부 신용카드 안내',
-                '제휴 카드 사용하고 캐시백 받기',
-                '제휴 카드 사용하고 5% 청구할인',
-                '벨리곰카드로 할인 쿠폰 받기',
-                '네이버페이 사용하고 네이버포인트 적립하기',
-                '신용카드 발급하고 캐시백 & 엘클럽 무료가입',
-                '롯데카드로 무이자할부 혜택',
-                '엘클럽 고객 전용 제휴 할인 받기',
+                '제휴카드 사용하고 캐시백/청구할인',
+                '벨리곰카드로 할인 쿠폰받기/무이자할부',
+                '네이버페이로 결제하고 네이버포인트 적립',
+                '신용카드 발급하고 캐시백&엘클럽 무료가입',
+                '엘클럽 전용 제휴사 할인 받기',
                 '회원가입하고 할인 쿠폰 받기',
-                '엘클럽 고객 체험단 신청하기',
+                '엘클럽 고객 상품 체험단 신청',
                 '다이아몬드 고객 엘클럽 무료가입',
-                '롯데오너스 멤버십 가입하기',
-                '엘클럽 가입하고 적립금 받기',
+                '롯데오너스 멤버스 한달 무료체험',
+		'엘클럽 가입하고 적립금 받기',
                 '출석하고 선물 교환권 받기',
-	            '오늘의 상품 구경하고 선물 교환권 받기',
-	            '숏핑 구경하고 선물 교환권 받기',
+                '숏핑/오늘의 상품 구경하고 선물 교환권 받기',
                 '바로TV톡 참여하고 선물 교환권 받기',
-                '선물하기로 주문하고, 선물 교환권 받기',
-                '구매하고 선물 교환권 받기',
-                '방송 알림 신청하고 선물 교환권 받기',
+	        '상품구매/선물하기 주문하고, 선물 교환권 받기',
+	        '방송알림 신청하고 선물 교환권 받기',
                 '엘라이브 방송 참여하고(퀴즈/댓글) 적립금 받기',
-                '엘클럽 고객 특가 기획전 구경하기',
                 '상품 리뷰 작성하고 적립금 받기',
-                '보험 가입하고 경품 받기',
-                '보험 가입하고 적립금 받기',
-                '보험료 확인하고 적립금 받기',
+                '보험가입/보험료 확인하고 경품/적립금 받기',
                 '출석체크하고 적립금 받기',
-                '(내가) 구매한 상품 리뷰 등록하고 적립금 받기',
                 '마케팅 정보 이용 동의하고 5천원 쿠폰 받기'
             ],
             sortingType: 'hybrid',
-            predefinedGroups: ['구매(적립/사은)', '결제할인(카드/무이자)', '멤버십/체험단', '참여/보상', '나만의 혜택 알림'],
+            predefinedGroups: ['구매(적립/사은)', '결제할인(카드/무이자)', '멤버십/체험단', '참여/보상', '나만의 맞춤 혜택'],
             shuffleCards: true,
             allowEditGroups: true,
             createdAt: new Date().toISOString()
@@ -2720,11 +2704,11 @@ console.log('📏 전송 데이터 크기:', JSON.stringify(minimalData).length,
             const submitBtn = document.getElementById('submit-btn');
             if (assignedCards === totalCards) {
                 submitBtn.disabled = false;
-                submitBtn.textContent = '✅ 응답 제출하기';
+                submitBtn.textContent = '✅ 다음 페이지로 이동(1/3)';
                 submitBtn.style.opacity = '1';
             } else {
                 submitBtn.disabled = false;
-                submitBtn.textContent = `✅ 응답 제출하기 (${totalCards - assignedCards}개 미분류)`;
+                submitBtn.textContent = `✅ 다음 페이지로 이동(1/3) (${totalCards - assignedCards}개 미분류)`;
                 submitBtn.style.opacity = '0.8';
             }
         }
