--- a/index.html
+++ b/index.html
@@ -3269,7 +3269,7 @@ console.log('📏 전송 데이터 크기:', JSON.stringify(minimalData).length,
 		} catch (error) {
     		    console.warn('Google Sheets 응답 오류, 하지만 저장은 완료될 수 있습니다:', error);
    	            // 실제로 데이터가 저장되고 있으므로 성공으로 처리
-    		showNotification('✅ 제출이 완료되었습니다! (응답 확인 중 일부 오류 발생)', 'success');
+    		showNotification('✅ 제출이 완료되었습니다!', 'success');
 		}
 
 		// 어떤 경우든 완료 페이지로 이동
